--- a/Projetos/2-Projeto_Página_do_Instagram/cadastrar.css
+++ b/Projetos/2-Projeto_Página_do_Instagram/cadastrar.css
@@ -48,6 +48,18 @@ body {
     margin-top: 30px;
 }
 
+.group2 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    background-color: #ffffff;
+    width: 350px;
+    padding: 1.3rem 0;
+    border: 1px solid lightgray;
+    margin-bottom: 10px;
+}
+
 .instagram-logo {
     height: 4rem;
     margin-top: 30px;
@@ -61,7 +73,7 @@ body {
     justify-content: center;
     text-align: center;
     color: #8E8E8E;
-    font-size: 15px;
+    font-size: 17px;
     font-weight: 550;
 }
 
@@ -70,7 +82,7 @@ body {
 }
 
 .texto-cadastro p {
-    margin-bottom: 10px;
+    margin-top: 13px;
     color: #8E8E8E;
     text-align: center;
 }
@@ -84,7 +96,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 10px 0;
+    margin: 15px 0;
     width: 350px;
 }
 
@@ -95,6 +107,7 @@ body {
 .separacao p {
     margin: 0 10px;
     color: #8E8E8E;
+    font-weight: 700;
 }
 
 .login-facebook {
@@ -105,8 +118,13 @@ body {
     color: #ffffff;
     padding: 8px;
     border-radius: 4px;
-    width: 80%;
+    width: 275px;
     text-align: center;
+}
+
+.login-facebook h2 {
+    font-size: 14px;
+    font-weight: 500;
 }
 
 .login-facebook i {
@@ -121,9 +139,16 @@ body {
     background-color: #0095f6;
     color: #ffffff;
     padding: 8px;
+    margin-bottom: 22px;
+    margin-top: 20px;
     border-radius: 4px;
     width: 80%;
     text-align: center;
+}
+
+.btn-cadastrar h2 {
+    font-size: 14px;
+    font-weight: 500;
 }
 
 .instagram-logout {
@@ -132,11 +157,13 @@ body {
 }
 
 .not-account {
-    color: rgb(160, 160, 160);
+    padding: 12px;
+    font-size: 14px;
 }
 
 .link-blue {
     color: #0095F6;
+    font-size: 14px;
 }
 
 .get-the-app {
@@ -175,9 +202,9 @@ body {
     padding-top: 13px;
     width: 266px;
     height: 36px;
-    margin-bottom: 10px;
-    border: 2px solid #DBDBDB;
-    border-radius: 5px;
+    margin-bottom: 7px;
+    border: 1px solid #DBDBDB;
+    border-radius: 2px;
 }
 
 .label-float input {
@@ -185,16 +212,12 @@ body {
     outline: none;
     width: 90%;
     align-items: center;
-    margin-left: 5px;
+    margin-left: 7px;
     font-size: 13px;
     transition: all .3s ease-out;
     -webkit-transition: all .3s ease-out;
     -moz-transition: all .3s ease-out;
     -webkit-appearance: none;
-}
-
-.label-float:focus {
-    border: 2px solid #A2A2A2;
 }
 
 .label-float input::placeholder {
@@ -204,11 +227,11 @@ body {
 .label-float label {
     pointer-events: none;
     position: absolute;
-    color: #A2A2A2;
+    color: #8E8E9B;
     top: 0;
-    margin-left: 5px;
+    margin-left: 7px;
     left: 0;
-    margin-top: 13px;
+    margin-top: 8px;
     transition: all .3s ease-out;
     -webkit-transition: all .3s ease-out;
     -moz-transition: all .3s ease-out;
@@ -216,9 +239,9 @@ body {
 
 .label-float input:focus+label,
 .label-float input:not(:placeholder-shown)+label {
-    font-size: 11px;
+    font-size: 9px;
     margin-top: 2px;
-    color: #A2A2A2;
+    color: #8E8E9B;
 }
 
 /* media queries */
