--- a/6-Introdução_ao_Angular/1-Course-manager/src/app/shared/star/star.component.html
+++ b/6-Introdução_ao_Angular/1-Course-manager/src/app/shared/star/star.component.html
@@ -1,7 +1,7 @@
 <div class="crop" [style.width.px]="starWidth" [title]="rating">
   <div style="width: 100px;">
-    <i class="fa fa-star"></i>
-    <i class="fa fa-star"></i>
+    <i class="fa-star"></i>
+    <i class="bi-star"></i>
     <i class="fa fa-star"></i>
     <i class="fa fa-star"></i>
     <i class="fa fa-star"></i>
