--- a/6-Introdução_ao_Angular/1-Course-manager/src/app/courses/courses.component.html
+++ b/6-Introdução_ao_Angular/1-Course-manager/src/app/courses/courses.component.html
@@ -17,37 +17,36 @@
 </div>
 <table class="table table-striped">
   <thead>
-  <tr>
-    <th>Image</th>
-    <th>Name</th>
-    <th>Price</th>
-    <th>Code</th>
-    <th>Release Date</th>
-    <th>Rating</th>
-    <th>Options</th>
-  </tr>
+    <tr>
+      <th>Image</th>
+      <th>Name</th>
+      <th>Price</th>
+      <th>Code</th>
+      <th>Release Date</th>
+      <th>Rating</th>
+      <th>Options</th>
+    </tr>
   </thead>
   <tbody>
 
-  <tr *ngFor="let course of filteredCourses">
-    <td><img [src]="course.imageUrl" width="40" height="40" ></td>
-    <td>{{ course.name }}</td>
-    <td>{{ course.price}}</td>
-    <td>{{ course.code | lowercase | replace: '-': ' ' }}</td>
-    <td>{{ course.releaseDate | date:'dd/MM/yyyy' }}</td>
-    <td>
-      <app-star [rating]="course.rating"></app-star>
-    </td>
-    <td>
-      <a [routerLink]="['/courses', course.id]" class="btn btn-primary me-2">
-        <i class="fa fa-edit"></i>
-      </a>
-      <button (click)="deleteById(course.id)" class="btn btn-danger">
-        <i class="fa fa-trash"></i>
-      </button>
-    </td>
-  </tr>
+    <tr *ngFor="let course of filteredCourses">
+      <td><img [src]="course.imageUrl" width="40" height="40"></td>
+      <td>{{ course.name }}</td>
+      <td>{{ course.price}}</td>
+      <td>{{ course.code | lowercase | replace: '-': ' ' }}</td>
+      <td>{{ course.releaseDate | date:'dd/MM/yyyy' }}</td>
+      <td>
+        <app-star [rating]="course.rating"></app-star>
+      </td>
+      <td>
+        <a [routerLink]="['/courses', course.id]" class="btn btn-primary me-2">
+          <i class="fa fa-edit">Edit</i>
+        </a>
+        <button (click)="deleteById(course.id)" class="btn btn-danger">
+          <i class="fa fa-trash">Delete</i>
+        </button>
+      </td>
+    </tr>
 
   </tbody>
 </table>
-
