--- a/6-Introdução_ao_Angular/1-Course-manager/src/app/courses/courses.component.html
+++ b/6-Introdução_ao_Angular/1-Course-manager/src/app/courses/courses.component.html
@@ -1,20 +1,20 @@
 <h2>Course List</h2>
 
-
-<div class="form-group row">
+<div class="form-group row mt-3 mb-5">
   <label class="col-sm-2 col-form-label">Filter By:</label>
-  <div class="col-sm-10">
+
+  <div class="col-sm-7">
     <input [(ngModel)]="filter" class="form-control">
   </div>
-</div>
-<div class="form-group row mt-3 mb-3">
-  <div class="col-12 m-0 p-0">
+
+  <div class="col-sm-3 m-0 p-0">
     <a [routerLink]="['new']" class="btn btn-success">
       <i class="fa fa-plus me-2"></i>
       <label>Add new Course</label>
     </a>
   </div>
 </div>
+
 <table class="table table-striped">
   <thead>
     <tr>
@@ -27,8 +27,8 @@
       <th>Options</th>
     </tr>
   </thead>
-  <tbody>
 
+  <tbody>
     <tr *ngFor="let course of filteredCourses">
       <td><img [src]="course.imageUrl" width="40" height="40"></td>
       <td>{{ course.name }}</td>
@@ -40,13 +40,12 @@
       </td>
       <td>
         <a [routerLink]="['/courses', course.id]" class="btn btn-primary me-2">
-          <i class="fa fa-edit">Edit</i>
+          <i class="fa fa-edit"></i>
         </a>
         <button (click)="deleteById(course.id)" class="btn btn-danger">
-          <i class="fa fa-trash">Delete</i>
+          <i class="fa fa-trash"></i>
         </button>
       </td>
     </tr>
-
   </tbody>
 </table>
